# C-Numerical-Analysis

./: .gitignore  CMakeLists.txt  GaussSiedel.c  LinearAlgebra.h  Makefile  NewtonRhapson.c  README.md  README_LIBRARY.md  RegulaFalsiMethod.c  SekantMethod.c  bisectionMethod.c  build.bat  clean.bat  common.h  derivative.c  derivative.h  main.c
cmake/: NumericalAnalysisConfig.cmake.in
examples/: CMakeLists.txt  GaussSiedel.c  example.c  library_demo.c
include/: bisection_method.h  common.h  derivative.h  gauss_seidel.h  linear_algebra.h  newton_raphson.h  numerical_analysis.h  numerical_methods.h  regula_falsi_method.h  secant_method.h
src/: CMakeLists.txt  bisection_method.c  common.c  derivative.c  gauss_seidel.c  linear_algebra.c  newton_raphson.c  numerical_methods.c  regula_falsi_method.c  secant_method.c
tests/: CMakeLists.txt
